@@ -41,6 +41,7 @@ version <next>:
 - VobSub demuxer
 - JSON captions for TED talks decoding support
 - SOX Resampler support in libswresample
+- aselect filter
 
 
 version 1.0:
